# alideploy

./: .env  README.md  poem.txt  pyproject.toml
src/alideploy/: main.py
