[project]
name = "alideploy"
version = "0.1.0"
description = "alideploy using crewAI"
authors = [{ name = "Syed Ali Mehdi", email = "alimehdi81@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "alideploy.main:kickoff"
run_crewai = "alideploy.main:kickoff"
plot = "alideploy.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
